--- a/HW05-aop/build.gradle
+++ b/HW05-aop/build.gradle
@@ -7,7 +7,7 @@ sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
 dependencies {
-    implementation 'org.ow2.asm:asm-commons'
+    implementation 'org.ow2.asm:asm:5.0.3'
 }
 
 task shadowSetterDemo(type: Jar, dependsOn: shadowJar) {
