--- a/HW08-serialization/build.gradle
+++ b/HW08-serialization/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     implementation 'javax.json:javax.json-api:1.1.4'
     implementation 'com.google.guava:guava'
     implementation 'javax.json:javax.json-api'
-    implementation 'org.glassfish:jakarta.json'
+    implementation 'org.glassfish:jakarta.json:2.0.1'
     implementation 'com.google.protobuf:protobuf-java-util'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
